# ecommerce-recsys

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/raw/: ml-1m.dvc
docs/: model_card.md
reports/: comparison.json  metrics.json
scripts/: validate_env.py
src/recsys/: __init__.py  api.py  config.py
src/recsys/data/: __init__.py  preprocess.py
src/recsys/evaluation/: __init__.py  compare.py  evaluate.py  metrics.py
src/recsys/features/: __init__.py  build.py  strategies.py
src/recsys/models/: __init__.py  base.py  baselines.py  factory.py  mlp.py  register.py  train.py  tune.py
tests/: test_baselines.py  test_config.py  test_factory.py  test_metrics.py  test_model.py
