[project]
name = "ecommerce-recsys"
version = "0.1.0"
description = "Sistema de recomendação para e-commerce — Tech Challenge Fase 02 (FIAP ML Engineering)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "scikit-learn>=1.4",
    "mlflow>=2.12,<3",
    "dvc>=3.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic-settings>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

# torch CPU-only: evita as wheels CUDA (~2 GB) — treino local e imagem Docker enxutos
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recsys"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["recsys"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
